k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kwazo-user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kwazo-user
  template:
    metadata:
      labels:
        app: kwazo-user
        version: IMAGE_LABEL
    spec:
      containers:
      - name: kwazo-user
        image: ACR_URL/kwazo-user:IMAGE_LABEL         
        ports:
        - containerPort: 8080
        resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: kwazo-user-service
spec:
  ports:
  - port: 80
    name: http
    targetPort: 8080
  selector:
    app: kwazo-user
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kwazo-ingress
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: kwazo-user-service
            port:
              number: 80
      - path: /posts
        pathType: Prefix
        backend:
          service:
            name: kwazo-post-service
            port:
              number: 80
      - path: /comment
        pathType: Prefix
        backend:
          service:
            name: kwazo-comment-service
            port:
              number: 80
